--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jpa.database=mysql
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pasteleria
+spring.datasource.url=jdbc:mysql://localhost:3306/pastel
 spring.datasource.username=root
-spring.datasource.password=12345678
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+#spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.security.user.name=admin
+spring.security.user.password=123
