--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+			<version>5.1.39</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -71,6 +71,41 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin> 
+		        <groupId>com.microsoft.azure</groupId>  
+		        <artifactId>azure-webapp-maven-plugin</artifactId>  
+		        <version>1.8.0</version>  
+		        <configuration> 
+		          <schemaVersion>V2</schemaVersion>  
+		          <resourceGroup>project-pastel-westus</resourceGroup>  
+		          <appName>pastelservices</appName>  
+		          <region>westus</region>  
+		          <pricingTier>F1</pricingTier>  
+		          <appSettings> 
+		            <property> 
+		              <name>PORT</name>  
+		              <value>8080</value> 
+		            </property>  
+		            <!--JVM OPTIONS -->  
+		           
+		          </appSettings>  
+		          <runtime> 
+		            <os>linux</os>  
+		            <javaVersion>jre8</javaVersion>  
+		            <webContainer>TOMCAT 9.0</webContainer> 
+		          </runtime>  
+		          <deployment> 
+		            <resources> 
+		              <resource> 
+		                <directory>${project.basedir}/target</directory>  
+		                <includes> 
+		                  <include>*.war</include> 
+		                </includes> 
+		              </resource> 
+		            </resources> 
+		          </deployment> 
+		        </configuration> 
+		    </plugin> 
 		</plugins>
 	</build>
 
