--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pastel
+spring.datasource.url=jdbc:mysql://localhost:3306/pastel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/pastel
 #spring.datasource.url=jdbc:mysql://azmysqld.mysql.database.azure.com:3306/pastel
 spring.datasource.username=root
 #spring.datasource.username=adm@azmysqld
