--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.jpa.database=mysql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pastel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/pastel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/pastel
-#spring.datasource.url=jdbc:mysql://azmysqld.mysql.database.azure.com:3306/pastel
-spring.datasource.username=root
-#spring.datasource.username=adm@azmysqld
-#spring.datasource.password=Ahw2t7jma
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://azuremysqld.mysql.database.azure.com/pastel
+#spring.datasource.username=root
+spring.datasource.username=adm@azuremysqld
+spring.datasource.password=Ahw2t7jma
+#spring.datasource.password=12345678
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.security.user.name=admin
 spring.security.user.password=123
