--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/pastel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://localhost:3306/pastel
-#spring.datasource.url=jdbc:mysql://azuremysqld.mysql.database.azure.com/pastel
+#spring.datasource.url=jdbc:mysql://azdmysql.mysql.database.azure.com/pastel
 spring.datasource.username=root
-#spring.datasource.username=adm@azuremysqld
+#spring.datasource.username=adm@azdmysql
 #spring.datasource.password=Ahw2t7jma
 spring.datasource.password=12345678
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
